resources/experiment/0814-specgen/081403/log-GetLowCaseLoop_M4-2025_08_15_02_08_16.txt
public class GetLowCaseLoop {
    //@ requires 'A' <= c && c <= 'Z' || 'a' <= c && c <= 'z';
    //@ ensures \result == 0 <==> (c < 'F' || c > 'Z');
    //@ ensures 'f' <= \result && \result <= 'z' ==> \result == Character.toLowerCase(c);
    public static char getLowCase(char c) {
        if(c < 'F' || c > 'Z') {
            return 0;
        }
        char t = 'f';
        //@ maintaining 'f' <= t && t <= 'z' + 1;
        //@ maintaining (\forall char x; 'f' <= x && x < t; x != Character.toLowerCase(c));
        //@ decreases 'z' - t + 1;
        while(t <= 'z' && t != c - 'A' + 'a') {
            t++;
        }
        return t;
    }
}
==============================
/root/specgen/SpecGen/project/081402-specgen/tmp/GetLowCaseLoop_M4.java:1: error: class GetLowCaseLoop is public, should be declared in a file named GetLowCaseLoop.java
public class GetLowCaseLoop {
       ^
1 error

==============================
public class GetLowCaseLoop {
    //@ requires 'A' <= c && c <= 'Z' || 'a' <= c && c <= 'z';
    //@ ensures \result == 0 <==> (c < 'F' || c > 'Z');
    //@ ensures 'f' <= \result && \result <= 'z' ==> \result == Character.toLowerCase(c);
    public static char getLowCase(char c) {
        if(c < 'F' || c > 'Z') {
            return 0;
        }
        char t = 'f';
        //@ maintaining 'f' <= t && t <= 'z' + 1;
        //@ maintaining (\forall char x; 'f' <= x && x < t; x != Character.toLowerCase(c));
        //@ decreases 'z' - t + 1;
        while(t <= 'z' && t != c - 'A' + 'a') {
            t++;
        }
        return t;
    }
}
==============================
/root/specgen/SpecGen/project/081402-specgen/tmp/GetLowCaseLoop_M4.java:1: error: class GetLowCaseLoop is public, should be declared in a file named GetLowCaseLoop.java
public class GetLowCaseLoop {
       ^
1 error

==============================
class GetLowCaseLoop {
    //@ requires 'A' <= c && c <= 'Z' || 'a' <= c && c <= 'z';
    //@ ensures \result == 0 <==> (c < 'F' || c > 'Z');
    //@ ensures 'f' <= \result && \result <= 'z' ==> \result == Character.toLowerCase(c);
    public static char getLowCase(char c) {
        if(c < 'F' || c > 'Z') {
            return 0;
        }
        char t = 'f';
        //@ maintaining 'f' <= t && t <= 'z' + 1;
        //@ maintaining (\forall char x; 'f' <= x && x < t; x != Character.toLowerCase(c));
        //@ decreases 'z' - t + 1;
        while(t <= 'z' && t != c - 'A' + 'a') {
            t++;
        }
        return t;
    }
}
==============================

==============================
